<resources>
  <string name="app_name">BeDoctor</string>
  <string name="refesh_number_checkin">Refresh number checkin</string>
  <string name="doctor_name">Doctor Name</string>
  <string name="department_doctor">Department</string>
  <string name="limit_people">Limit Patient Per Day</string>
  <string name="ok">ok</string>
  <string name="current_patient">Current patient</string>
  <string name="_1">1</string>
  <string name="check_out">Check Out</string>
  <string name="title_toobar">Dr. LE TRI DAT</string>
</resources>
