<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manager__checkin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bedoctor.zentech.com.bedoctor.ManagerCheckin"
    >
  <include
      layout="@layout/tool_bar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      />

  <TextView
      android:layout_below="@+id/toolbar"
      android:layout_marginTop="80dp"
      android:id="@+id/current_patient"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/current_patient"
      android:textSize="30sp"
      android:layout_centerHorizontal="true"
      />
  <TextView
      android:id="@+id/current_patient_number"
      android:layout_marginTop="20dp"
      android:layout_below="@+id/current_patient"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/_1"
      android:textSize="150sp"
      android:layout_centerHorizontal="true"
      />
  <Button
      android:layout_below="@id/current_patient_number"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/check_out"
      android:textColor="@color/white"
      android:layout_margin="10dp"
      android:background="@drawable/custom_button"
      android:id="@+id/check_out"
      />

</RelativeLayout>
