<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/hint"
        android:theme="@style/AppTheme"
        >

      <EditText
          android:id="@+id/doctor_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/doctor_name"
          android:inputType="textNoSuggestions"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/hint"
        android:theme="@style/AppTheme"
        >

      <EditText
          android:id="@+id/department"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/department_doctor"
          android:inputType="datetime"
          />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/hint"
        android:theme="@style/AppTheme"
        >

      <EditText
          android:id="@+id/limit_patient"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/limit_people"
          android:inputType="phone"
          />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/hint"
        android:theme="@style/AppTheme"
        >


    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/hint"
        android:theme="@style/AppTheme"
        >

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:background="@drawable/custom_button"
        android:id="@+id/ok"
        />

  </LinearLayout>

</ScrollView>
